...
        ],
      ),

      body: _buildWordList(),

      floatingActionButton: FloatingActionButton(
        key: const Key('newWordButton'),
        onPressed: () {
          _showAddWordDialog();
        },
        tooltip: 'Add new word',
        child: const Icon(Icons.add),
      ),
...
